cli/lfc/src/test/resources/org/lflang/cli/tabs.stderr
lfc: error: State must have a type.
--> %%%PATH.lf%%%:4:2
  |
3 | main reactor {
4 |     state foo(1);
  |     ^^^^^^^^^^^^^ State must have a type.
  |
5 |     state    bar(1);
lfc: error: State must have a type.
--> %%%PATH.lf%%%:5:2
  |
4 |     state foo(1);
5 |     state    bar(1);
  |     ^^^^^^^^^^^^^^^^ State must have a type.
  |
6 | }